--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.Avatar-container {
+  width: 300px;
+  height: 300px;
+}
+
+.Avatar-container img {
+  width: 100%;
+  height: auto;
+}
